--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=traceroute
+application.vendor=charlesmariller
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,17 +27,30 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/traceroute.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.gs-algo-1.2.jar=lib/gs-algo-1.2/gs-algo-1.2.jar
+file.reference.gs-core-1.2.jar=lib/gs-core-1.2/gs-core-1.2.jar
+file.reference.gs-ui-1.2.jar=lib/gs-ui-1.2/gs-ui-1.2.jar
+file.reference.lib-gs-algo-1.2=lib/gs-algo-1.2/
+file.reference.lib-gs-core-1.2=lib/gs-core-1.2/
+file.reference.lib-gs-ui-1.2=lib/gs-ui-1.2/
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.lib-gs-algo-1.2}:\
+    ${file.reference.lib-gs-core-1.2}:\
+    ${file.reference.lib-gs-ui-1.2}:\
+    ${file.reference.gs-algo-1.2.jar}:\
+    ${file.reference.gs-ui-1.2.jar}:\
+    ${file.reference.gs-core-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
