--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,7 +67,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=model.MyModel
+main.class=controller.MyController
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
